[package]
name = "zeegoev"
version = "0.1.0"
description = "A short description of my package"
documentation = "https://www.github.com/skbhati199"
edition = "2021"
authors = ["Sonu Kumar", "skbhati199@gmail.com"]
homepage = "https://www.github.com/skbhati199"
keywords = ["gamedev", "graphics"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
readme = "README.md"
license = "MIT"
license-file = "LICENSE.txt"

[dependencies]
